--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="https://www.facebook.com/flowide" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a href="http://flow-ide.azurewebsites.net/blog" class="btn btn-default btn-lg"><i class="fa fa-wordpress fa-fw"></i> <span class="network-name">Blog</span></a>
                             </li>
                         </ul>
                     </div>
@@ -112,23 +112,17 @@
 
 	<a  name="services" id="about"></a>
     <div class="content-section-a">
-
-        <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-lg-offset-1 col-lg-3 col-sm-5">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Coding is now as easy as Lego™</h2>
                     <p class="lead">Flow's codeblocks allow you to build your program visually. Simply drag and drop a block from the menu and Flow will do the coding for you. </p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <div class="col-lg-6 col-lg-offset-1 col-sm-7">
                     <img class="img-responsive" src="img/one.png" alt="">
                 </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-
     </div>
     <!-- /.content-section-a -->
 
@@ -177,24 +171,17 @@
     <!-- /.content-section-a -->
 	
 	<div class="content-section-b">
-
-        <div class="container">
-
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+            	<div class="col-lg-6 col-lg-offset-1 col-sm-7">
+                    <img class="img-responsive" src="img/four.png" alt="">
+                </div>
+                <div class="col-lg-offset-1 col-lg-3 col-sm-5">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Learn from the best</h2>
                     <p class="lead">Flow also has an open tutorial system, allowing users to download tutorials made by both Flow and the community allowing you to learn from the best without even trying.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/four.png" alt="">
-                </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-
     </div>
 	
 	<a  name="contact"></a>
@@ -211,7 +198,7 @@
 					<br>
 					<ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="http://goo.gl/forms/glNDDVJegxvJe1RJ3" class="btn btn-default btn-lg" onclick="_gaq.push('_trackEvent', 'event', 'buttons', 'click', 'Survey Form', 1, 'true');"><span class="network-name">Click here to support Flow</span></a>
+                      x      <a href="http://goo.gl/forms/glNDDVJegxvJe1RJ3" class="btn btn-default btn-lg" onclick="_gaq.push('_trackEvent', 'event', 'buttons', 'click', 'Survey Form', 1, 'true');"><span class="network-name">Click here to support Flow</span></a>
                         </li>
                     </ul>
                 </div>
@@ -236,13 +223,10 @@
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="" class="btn btn-default btn-lg"><i class="fa fa-fw"></i> <span class="network-name">Facebook</span></a>
+                            <a href="https://www.facebook.com/flowide" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Facebook</span></a>
                         </li>
                         <li>
-                            <a href="" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="http://flow-ide.azurewebsites.net/blog" class="btn btn-default btn-lg"><i class="fa fa-wordpress fa-fw"></i> <span class="network-name">Blog</span></a>
                         </li>
                     </ul>
                 </div>
