--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://www.facebook.com/flowide" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="https://www.facebook.com/flowide" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Facebook</span></a>
                             </li>
                             <li>
                                 <a href="http://flow-ide.azurewebsites.net/blog" class="btn btn-default btn-lg"><i class="fa fa-wordpress fa-fw"></i> <span class="network-name">Blog</span></a>
