--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<br>
 					<ul class="list-inline banner-social-buttons">
                         <li>
-                      x      <a href="http://goo.gl/forms/glNDDVJegxvJe1RJ3" class="btn btn-default btn-lg" onclick="_gaq.push('_trackEvent', 'event', 'buttons', 'click', 'Survey Form', 1, 'true');"><span class="network-name">Click here to support Flow</span></a>
+                            <a href="http://goo.gl/forms/glNDDVJegxvJe1RJ3" class="btn btn-default btn-lg" onclick="_gaq.push('_trackEvent', 'event', 'buttons', 'click', 'Survey Form', 1, 'true');"><span class="network-name">Click here to support Flow</span></a>
                         </li>
                     </ul>
                 </div>
